# TEA

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  verify_data_completeness.py
RAW_DATA/: smart259.csv
app/: .env.example  Dockerfile  requirements.txt
app/analytics/: __init__.py  api.py  correlation_service.py  pca_service.py
app/etl/: __init__.py  load_csv_to_pg.py
app/streamlit_app/: __init__.py  main.py  utils.py
app/streamlit_app/pages/: 01_Overview.py  02_Trends.py  03_Heatmap.py  04_DataQuality.py  05_Forecast.py  06_Correlations.py  07_PCA_Insights.py
data/: smart263.csv
data/processed/: smart256.csv  smart260.csv  smart262.csv
deployment/gcp/: README.md  cloud-run-deployment.md  cloudbuild.yaml  gke-deployment.md  quick-deploy.sh
deployment/gcp/terraform/: main.tf
docs/: schema.md
postgres/: Dockerfile  init.sql
postgres/migrations/: 001_fix_wind_direction_overflow.sql  002_add_radiation_column.sql  003_add_missing_columns.sql  004_remove_unused_columns.sql
scripts/: fix_and_reload_data.sh
