[tool.poetry]
name = "weather-data-platform"
version = "1.0.0"
description = "A comprehensive weather data analysis platform with ETL pipeline and interactive dashboard"
authors = ["Weather Platform Team"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
psycopg2-binary = "^2.9.9"
plotly = "^5.18.0"
altair = "^5.2.0"
scikit-learn = "^1.3.2"
prophet = "^1.1.5"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true